--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -11,9 +11,11 @@
     z-index: 1031;
     background: rgba(255, 255, 255, 0.7);
     border-radius: 3px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     width: 100%;
     height: 100%;
 }
