--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -35,3 +35,22 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+/*回到顶部*/
+#toTop {
+    display: none;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    /*width: 64px;*/
+    /*height: 64px;*/
+    /*background-image: url('http://geniuscarrier.com/images/up.png');*/
+    /*background-repeat: no-repeat;*/
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* For IE8 and earlier */
+}
+
+#toTop:hover {
+    opacity: 0.8;
+    filter: alpha(opacity=80); /* For IE8 and earlier */
+}
