--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -54,3 +54,10 @@ img {
     opacity: 0.8;
     filter: alpha(opacity=80); /* For IE8 and earlier */
 }
+
+/*slickGrid单元格编辑框样式*/
+.editor-text {
+    height: 22px;
+    /*noinspection CssInvalidPropertyValue*/
+    width: -webkit-fill-available;
+}
